<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtVwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/black"
        android:text="@string/welcome_login_register"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/txtVvetericano"
        android:layout_width="wrap_content"
        android:fontFamily="@font/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/vetericano_login_register"
        android:textColor="@color/blue"
        android:textSize="38dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVwelcome"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sans"
        android:text="@string/care_login_register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVvetericano"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/imgDogChanchita"
        android:layout_width="327dp"
        android:layout_height="263dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/img_perro"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginWelcome"
        app:layout_constraintDimensionRatio="0.65:0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.345"
        app:layout_constraintWidth_percent="0.6"
        app:srcCompat="@drawable/chan" />

    <Button
        android:id="@+id/btnLoginWelcome"
        android:layout_width="wrap_content"
        android:fontFamily="@font/sans"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="15dp"
        android:text="@string/btn_login_login_register"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUpWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDogChanchita" />

    <Button
        android:id="@+id/btnSignUpWelcome"
        android:layout_width="wrap_content"
        android:fontFamily="@font/sans"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/yellow"
        android:paddingHorizontal="54dp"
        android:paddingVertical="15dp"
        android:text="@string/btn_sign_login_register"
        app:layout_constraintBottom_toTopOf="@+id/imgVetericanoLogotip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginWelcome" />


    <ImageView
        android:id="@+id/imgVetericanoLogotip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logovetericano"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpWelcome"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@drawable/vectorlogovetericano"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>